# pixel_insight

./: .gitignore  LICENSE  README.md  requirements.txt
analysis/: search_data.sql
endpoints/domainality-api/: pyproject.toml
endpoints/domainality-api/templates/: index.html
endpoints/domainality/src/: App.css  LoadingPage.js  ThisOrThat.css  index.js
endpoints/image-namegen-api/: app.py  config.yaml
endpoints/image-namegen-api/authentications/: jwt_token_client.py
endpoints/image-namegen-api/common/: utils.py
endpoints/image-namegen-api/notebook/: api_instruction.ipynb
src/domainality/: package-lock.json  package.json
src/domainality-api/: agent.py
src/domainality/src/: App.js  ListCard.js  LoadingPage.css  ThisOrThat.js
src/image-namegen-api/: pyproject.toml
src/image-namegen-api/notebook/.ipynb_checkpoints/: api_instruction-checkpoint.ipynb
src/image-namegen-api/services/: gocaas_client.py  prompts.py
