[tool.poetry]
name = "domainality-api"
version = "0.1.0"
description = ""
authors = ["Zheqi Liu <zliu2@godaddy.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.55.0"
pydantic = "^2.10.1"
flask = "^3.1.0"
httpx = "0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
