[tool.poetry]
name = "hackerthon"
version = "0.1.0"
description = ""
authors = ["Zheqi Liu <zliu2@godaddy.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.28.1"
pandas = "^2.2.3"
boto3 = "^1.35.78"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
